--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,9 +1,11 @@
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3307
-spring.datasource.url=jdbc:mysql://localhost:3306/testDB
+#spring.datasource.url=jdbc:mysql://localhost:3306/testDB
+spring.datasource.url=jdbc:mysql:driver://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.driver
-spring.jpa.properties.hibernate.dialet=org.hibernate.dialet.mysqldb.dialet
+#spring.jpa.properties.hibernate.dialet=org.hibernate.dialet.mysqldb.dialet
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
