--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,6 +1,5 @@
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3307
-#spring.datasource.url=jdbc:mysql://localhost:3306/testDB
-spring.datasource.url=jdbc:mysql:driver://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/mysql
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.driver
