--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,14 +1,15 @@
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3307
 spring.datasource.url=jdbc:mysql://localhost:3306/learn
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.driver
-#spring.jpa.properties.hibernate.dialet=org.hibernate.dialet.mysqldb.dialet
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
+
 #spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 management.endpoints.web.exposure.include=*
 
